Refs #12723 !strict. Added -webkit-transform to avoid screen flicker.
git-svn-id: http://svn.dojotoolkit.org/src/dojox/trunk@24660 560b804f-0ae3-0310-86f3-f6aa0a117693

--- a/mobile/themes/common/transitions/flip.css
+++ b/mobile/themes/common/transitions/flip.css
@@ -2,11 +2,13 @@
 	-webkit-animation-duration: .6s;
 	-webkit-animation-name: mblFlipOut;
 	-webkit-animation-timing-function: ease-in;
+	-webkit-transform: rotateY(90deg) scale(.8);
 }
 .mblFlip.mblIn {
 	-webkit-animation-duration: .6s;
 	-webkit-animation-name: mblFlipIn;
 	-webkit-animation-timing-function: ease-out;
+	-webkit-transform: rotateY(0deg) scale(1);
 }
 @-webkit-keyframes mblFlipOut {
 	0% { -webkit-transform: rotateY(0deg) scale(1); }
